--- a/styles/globals.css
+++ b/styles/globals.css
@@ -81,6 +81,13 @@
 	}
 }
 
+@media (max-width: 768px) {
+	body {
+		font-size: 14px;
+		line-height: 1.3;
+	}
+}
+
 * {
 	box-sizing: border-box;
 	padding: 0;
@@ -94,13 +101,8 @@ body {
 }
 
 body {
-	color: rgb(var(--foreground-rgb));
-	background: linear-gradient(
-			to bottom,
-			transparent,
-			rgb(var(--background-end-rgb))
-		)
-		rgb(var(--background-start-rgb));
+	background-color: #626c94;
+	padding-bottom: 100px;
 }
 
 a {
