--- a/styles/globals.css
+++ b/styles/globals.css
@@ -121,3 +121,14 @@ a {
 	font-size: 2.5rem;
 	text-align: center;
 }
+
+/* Removes the arrows in number inputs */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
+
+input[type="number"] {
+	-moz-appearance: textfield; /* Firefox */
+}
