--- a/styles/globals.css
+++ b/styles/globals.css
@@ -98,11 +98,9 @@ html,
 body {
 	max-width: 100vw;
 	overflow-x: hidden;
-}
-
-body {
-	background-color: #626c94;
+	background-color: #fffefc;
 	padding-bottom: 100px;
+	color: black;
 }
 
 a {
